@@ -100,7 +100,9 @@ import static command_request.CommandRequestOuterClass.RequestType.ObjectRefCoun
 import static command_request.CommandRequestOuterClass.RequestType.PExpire;
 import static command_request.CommandRequestOuterClass.RequestType.PExpireAt;
 import static command_request.CommandRequestOuterClass.RequestType.PExpireTime;
+import static command_request.CommandRequestOuterClass.RequestType.PSubscribeBlocking;
 import static command_request.CommandRequestOuterClass.RequestType.PTTL;
+import static command_request.CommandRequestOuterClass.RequestType.PUnsubscribeBlocking;
 import static command_request.CommandRequestOuterClass.RequestType.Persist;
 import static command_request.CommandRequestOuterClass.RequestType.PfAdd;
 import static command_request.CommandRequestOuterClass.RequestType.PfCount;
@@ -145,12 +147,14 @@ import static command_request.CommandRequestOuterClass.RequestType.SetRange;
 import static command_request.CommandRequestOuterClass.RequestType.Sort;
 import static command_request.CommandRequestOuterClass.RequestType.SortReadOnly;
 import static command_request.CommandRequestOuterClass.RequestType.Strlen;
+import static command_request.CommandRequestOuterClass.RequestType.SubscribeBlocking;
 import static command_request.CommandRequestOuterClass.RequestType.TTL;
 import static command_request.CommandRequestOuterClass.RequestType.Time;
 import static command_request.CommandRequestOuterClass.RequestType.Touch;
 import static command_request.CommandRequestOuterClass.RequestType.Type;
 import static command_request.CommandRequestOuterClass.RequestType.UnWatch;
 import static command_request.CommandRequestOuterClass.RequestType.Unlink;
+import static command_request.CommandRequestOuterClass.RequestType.UnsubscribeBlocking;
 import static command_request.CommandRequestOuterClass.RequestType.Wait;
 import static command_request.CommandRequestOuterClass.RequestType.Watch;
 import static command_request.CommandRequestOuterClass.RequestType.XAck;
@@ -295,7 +299,6 @@ import glide.api.models.commands.ExpireOptions;
 import glide.api.models.commands.FlushMode;
 import glide.api.models.commands.GetExOptions;
 import glide.api.models.commands.InfoOptions.Section;
-import glide.api.models.commands.LInsertOptions.InsertPosition;
 import glide.api.models.commands.LPosOptions;
 import glide.api.models.commands.ListDirection;
 import glide.api.models.commands.RangeOptions;
@@ -368,8 +371,6 @@ import glide.api.models.commands.stream.StreamTrimOptions.MinId;
 import glide.managers.CommandManager;
 import glide.utils.ArgsBuilder;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -836,7 +837,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGetExOptions() {
-        return Arrays.asList(
+        return List.of(
                 Arguments.of(
                         // seconds
                         "test_with_seconds", GetExOptions.Seconds(10L), new String[] {"EX", "10"}),
@@ -859,7 +860,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGetExOptionsBinary() {
-        return Arrays.asList(
+        return List.of(
                 Arguments.of(
                         // seconds
                         "test_with_seconds", GetExOptions.Seconds(10L), new GlideString[] {gs("EX"), gs("10")}),
@@ -1729,7 +1730,7 @@ public class GlideClientTest {
         testResponse.complete(payload);
 
         // match on protobuf request
-        when(commandManager.submitScript(eq(script), eq(Arrays.asList()), eq(Arrays.asList()), any()))
+        when(commandManager.submitScript(eq(script), eq(List.of()), eq(List.of()), any()))
                 .thenReturn(testResponse);
 
         // exercise
@@ -1758,8 +1759,8 @@ public class GlideClientTest {
         // match on protobuf request
         when(commandManager.submitScript(
                         eq(script),
-                        eq(Arrays.asList(gs("key1"), gs("key2"))),
-                        eq(Arrays.asList(gs("arg1"), gs("arg2"))),
+                        eq(List.of(gs("key1"), gs("key2"))),
+                        eq(List.of(gs("arg1"), gs("arg2"))),
                         any()))
                 .thenReturn(testResponse);
 
@@ -1794,8 +1795,8 @@ public class GlideClientTest {
         // match on protobuf request
         when(commandManager.submitScript(
                         eq(script),
-                        eq(Arrays.asList(gs("key1"), gs("key2"))),
-                        eq(Arrays.asList(gs("arg1"), gs("arg2"))),
+                        eq(List.of(gs("key1"), gs("key2"))),
+                        eq(List.of(gs("arg1"), gs("arg2"))),
                         any()))
                 .thenReturn(testResponse);
 
@@ -4031,7 +4032,7 @@ public class GlideClientTest {
     public void smembers_returns_success() {
         // setup
         String key = "testKey";
-        Set<String> value = Collections.singleton("testMember");
+        Set<String> value = Set.of("testMember");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4100,7 +4101,7 @@ public class GlideClientTest {
     public void sdiff_returns_success() {
         // setup
         String[] keys = new String[] {"key1", "key2"};
-        Set<String> value = createSet("1", "2");
+        Set<String> value = Set.of("1", "2");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4123,7 +4124,7 @@ public class GlideClientTest {
     public void sdiff_binary_returns_success() {
         // setup
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
-        Set<GlideString> value = createSet(gs("1"), gs("2"));
+        Set<GlideString> value = Set.of(gs("1"), gs("2"));
 
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4298,7 +4299,7 @@ public class GlideClientTest {
     public void sinter_returns_success() {
         // setup
         String[] keys = new String[] {"key1", "key2"};
-        Set<String> value = createSet("1", "2");
+        Set<String> value = Set.of("1", "2");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4321,7 +4322,7 @@ public class GlideClientTest {
     public void sinter_binary_returns_success() {
         // setup
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
-        Set<GlideString> value = createSet(gs("1"), gs("2"));
+        Set<GlideString> value = Set.of(gs("1"), gs("2"));
 
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4731,7 +4732,7 @@ public class GlideClientTest {
         String[] keys = new String[] {"key1", "key2"};
         ScoreFilter modifier = MAX;
         String[] arguments = {"2", "key1", "key2", "MAX"};
-        Map<String, Object> value = Collections.singletonMap("key1", "elem");
+        Map<String, Object> value = Map.of("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4756,7 +4757,7 @@ public class GlideClientTest {
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
         ScoreFilter modifier = MAX;
         GlideString[] arguments = {gs("2"), gs("key1"), gs("key2"), gs("MAX")};
-        Map<GlideString, Object> value = Collections.singletonMap(gs("key1"), "elem");
+        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4782,7 +4783,7 @@ public class GlideClientTest {
         ScoreFilter modifier = MAX;
         long count = 42;
         String[] arguments = {"2", "key1", "key2", "MAX", "COUNT", "42"};
-        Map<String, Object> value = Collections.singletonMap("key1", "elem");
+        Map<String, Object> value = Map.of("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4808,7 +4809,7 @@ public class GlideClientTest {
         ScoreFilter modifier = MAX;
         long count = 42;
         GlideString[] arguments = {gs("2"), gs("key1"), gs("key2"), gs("MAX"), gs("COUNT"), gs("42")};
-        Map<GlideString, Object> value = Collections.singletonMap(gs("key1"), "elem");
+        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4834,7 +4835,7 @@ public class GlideClientTest {
         String[] keys = new String[] {"key1", "key2"};
         ScoreFilter modifier = MAX;
         String[] arguments = {"0.5", "2", "key1", "key2", "MAX"};
-        Map<String, Object> value = Collections.singletonMap("key1", "elem");
+        Map<String, Object> value = Map.of("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4861,7 +4862,7 @@ public class GlideClientTest {
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
         ScoreFilter modifier = MAX;
         GlideString[] arguments = {gs("0.5"), gs("2"), gs("key1"), gs("key2"), gs("MAX")};
-        Map<GlideString, Object> value = Collections.singletonMap(gs("key1"), "elem");
+        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4889,7 +4890,7 @@ public class GlideClientTest {
         ScoreFilter modifier = MAX;
         long count = 42;
         String[] arguments = {"0.5", "2", "key1", "key2", "MAX", "COUNT", "42"};
-        Map<String, Object> value = Collections.singletonMap("key1", "elem");
+        Map<String, Object> value = Map.of("key1", "elem");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -4920,7 +4921,7 @@ public class GlideClientTest {
         GlideString[] arguments = {
             gs("0.5"), gs("2"), gs("key1"), gs("key2"), gs("MAX"), gs("COUNT"), gs("42")
         };
-        Map<GlideString, Object> value = Collections.singletonMap(gs("key1"), "elem");
+        Map<GlideString, Object> value = Map.of(gs("key1"), "elem");
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5022,7 +5023,7 @@ public class GlideClientTest {
     @Test
     public void configGet_returns_success() {
         // setup
-        Map<String, String> testPayload = Collections.singletonMap("timeout", "1000");
+        Map<String, String> testPayload = Map.of("timeout", "1000");
         CompletableFuture<Map<String, String>> testResponse = new CompletableFuture<>();
         testResponse.complete(testPayload);
 
@@ -5053,8 +5054,7 @@ public class GlideClientTest {
                 .thenReturn(testResponse);
 
         // exercise
-        CompletableFuture<String> response =
-                service.configSet(Collections.singletonMap("timeout", "1000"));
+        CompletableFuture<String> response = service.configSet(Map.of("timeout", "1000"));
 
         // verify
         assertEquals(testResponse, response);
@@ -5165,7 +5165,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = new String[] {key};
-        Map<String, Double> value = Collections.singletonMap("member1", 2.5);
+        Map<String, Double> value = Map.of("member1", 2.5);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5189,7 +5189,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = new GlideString[] {key};
-        Map<GlideString, Double> value = Collections.singletonMap(gs("member1"), 2.5);
+        Map<GlideString, Double> value = Map.of(gs("member1"), 2.5);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5215,7 +5215,7 @@ public class GlideClientTest {
         String key = "testKey";
         long count = 2L;
         String[] arguments = new String[] {key, Long.toString(count)};
-        Map<String, Double> value = createMap("member1", 2.0, "member2", 3.0);
+        Map<String, Double> value = Map.of("member1", 2.0, "member2", 3.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5240,7 +5240,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         long count = 2L;
         GlideString[] arguments = new GlideString[] {key, gs(Long.toString(count))};
-        Map<GlideString, Double> value = createMap(gs("member1"), 2.0, gs("member2"), 3.0);
+        Map<GlideString, Double> value = Map.of(gs("member1"), 2.0, gs("member2"), 3.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5315,7 +5315,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = new String[] {key};
-        Map<String, Double> value = Collections.singletonMap("member1", 2.5);
+        Map<String, Double> value = Map.of("member1", 2.5);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5339,7 +5339,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = new GlideString[] {key};
-        Map<GlideString, Double> value = Collections.singletonMap(gs("member1"), 2.5);
+        Map<GlideString, Double> value = Map.of(gs("member1"), 2.5);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5415,7 +5415,7 @@ public class GlideClientTest {
         String key = "testKey";
         long count = 2L;
         String[] arguments = new String[] {key, Long.toString(count)};
-        Map<String, Double> value = createMap("member1", 3.0, "member2", 1.0);
+        Map<String, Double> value = Map.of("member1", 3.0, "member2", 1.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5440,7 +5440,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         long count = 2L;
         GlideString[] arguments = new GlideString[] {key, gs(Long.toString(count))};
-        Map<GlideString, Double> value = createMap(gs("member1"), 3.0, gs("member2"), 1.0);
+        Map<GlideString, Double> value = Map.of(gs("member1"), 3.0, gs("member2"), 1.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5677,7 +5677,7 @@ public class GlideClientTest {
         RangeByIndex rangeByIndex = new RangeByIndex(0, 4);
         String[] arguments =
                 new String[] {key, rangeByIndex.getStart(), rangeByIndex.getEnd(), WITH_SCORES_VALKEY_API};
-        Map<String, Double> value = createMap("one", 1.0, "two", 2.0, "three", 3.0);
+        Map<String, Double> value = Map.of("one", 1.0, "two", 2.0, "three", 3.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5705,7 +5705,7 @@ public class GlideClientTest {
                 new GlideString[] {
                     key, gs(rangeByIndex.getStart()), gs(rangeByIndex.getEnd()), gs(WITH_SCORES_VALKEY_API)
                 };
-        Map<GlideString, Double> value = createMap(gs("one"), 1.0, gs("two"), 2.0, gs("three"), 3.0);
+        Map<GlideString, Double> value = Map.of(gs("one"), 1.0, gs("two"), 2.0, gs("three"), 3.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5746,7 +5746,7 @@ public class GlideClientTest {
                     "2",
                     WITH_SCORES_VALKEY_API
                 };
-        Map<String, Double> value = createMap("two", 2.0, "three", 3.0);
+        Map<String, Double> value = Map.of("two", 2.0, "three", 3.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -5786,7 +5786,7 @@ public class GlideClientTest {
                     gs("2"),
                     gs(WITH_SCORES_VALKEY_API)
                 };
-        Map<GlideString, Double> value = createMap(gs("two"), 2.0, gs("three"), 3.0);
+        Map<GlideString, Double> value = Map.of(gs("two"), 2.0, gs("three"), 3.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6116,7 +6116,7 @@ public class GlideClientTest {
         String key1 = "testKey1";
         String key2 = "testKey2";
         String[] arguments = new String[] {"2", key1, key2, WITH_SCORES_VALKEY_API};
-        Map<String, Double> value = Collections.singletonMap("element1", 2.0);
+        Map<String, Double> value = Map.of("element1", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6142,7 +6142,7 @@ public class GlideClientTest {
         GlideString key1 = gs("testKey1");
         GlideString key2 = gs("testKey2");
         GlideString[] arguments = new GlideString[] {gs("2"), key1, key2, gs(WITH_SCORES_VALKEY_API)};
-        Map<GlideString, Double> value = Collections.singletonMap(gs("element1"), 2.0);
+        Map<GlideString, Double> value = Map.of(gs("element1"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6775,7 +6775,7 @@ public class GlideClientTest {
         KeyArray keyArray = new KeyArray(keys);
         String[] arguments =
                 concatenateArrays(keyArray.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6801,7 +6801,7 @@ public class GlideClientTest {
         KeyArrayBinary keyArray = new KeyArrayBinary(keys);
         GlideString[] arguments =
                 concatenateArrays(keyArray.toArgs(), new GlideString[] {gs(WITH_SCORES_VALKEY_API)});
-        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6832,7 +6832,7 @@ public class GlideClientTest {
         String[] arguments =
                 concatenateArrays(
                         weightedKeys.toArgs(), aggregate.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6866,7 +6866,7 @@ public class GlideClientTest {
                         .add(aggregate.toArgs())
                         .add(WITH_SCORES_VALKEY_API)
                         .toArray();
-        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6944,7 +6944,7 @@ public class GlideClientTest {
         KeyArray keyArray = new KeyArray(keys);
         String[] arguments =
                 concatenateArrays(keyArray.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -6970,7 +6970,7 @@ public class GlideClientTest {
         KeyArrayBinary keyArray = new KeyArrayBinary(keys);
         GlideString[] arguments =
                 concatenateArrays(keyArray.toArgs(), new GlideString[] {gs(WITH_SCORES_VALKEY_API)});
-        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -7001,7 +7001,7 @@ public class GlideClientTest {
         String[] arguments =
                 concatenateArrays(
                         weightedKeys.toArgs(), aggregate.toArgs(), new String[] {WITH_SCORES_VALKEY_API});
-        Map<String, Double> value = createMap("elem1", 1.0, "elem2", 2.0);
+        Map<String, Double> value = Map.of("elem1", 1.0, "elem2", 2.0);
 
         CompletableFuture<Map<String, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -7035,7 +7035,7 @@ public class GlideClientTest {
                         .add(aggregate.toArgs())
                         .add(WITH_SCORES_VALKEY_API)
                         .toArray();
-        Map<GlideString, Double> value = createMap(gs("elem1"), 1.0, gs("elem2"), 2.0);
+        Map<GlideString, Double> value = Map.of(gs("elem1"), 1.0, gs("elem2"), 2.0);
 
         CompletableFuture<Map<GlideString, Double>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -7638,7 +7638,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getStreamAddOptions() {
-        return Arrays.asList(
+        return List.of(
                 Arguments.of(
                         // no TRIM option
                         "test_xadd_no_trim",
@@ -7849,7 +7849,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getStreamTrimOptions() {
-        return Arrays.asList(
+        return List.of(
                 Arguments.of(
                         // MAXLEN just THRESHOLD
                         "test_xtrim_maxlen", new MaxLen(5L), new String[] {TRIM_MAXLEN_VALKEY_API, "5"}),
@@ -7883,7 +7883,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getStreamTrimOptionsBinary() {
-        return Arrays.asList(
+        return List.of(
                 Arguments.of(
                         // MAXLEN just THRESHOLD
                         "test_xtrim_maxlen",
@@ -7977,8 +7977,8 @@ public class GlideClientTest {
         String streamIdTwo = "id-two";
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
         String[] arguments = {READ_STREAMS_VALKEY_API, keyOne, keyTwo, streamIdOne, streamIdTwo};
 
         CompletableFuture<Map<String, Map<String, String[][]>>> testResponse =
@@ -8012,8 +8012,8 @@ public class GlideClientTest {
         GlideString streamIdTwo = gs("id-two");
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
         GlideString[] arguments = {
             gs(READ_STREAMS_VALKEY_API), keyOne, keyTwo, streamIdOne, streamIdTwo
         };
@@ -8050,7 +8050,7 @@ public class GlideClientTest {
         Long count = 10L;
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult =
-                Collections.singletonMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
         String[] arguments = {
             READ_COUNT_VALKEY_API,
             count.toString(),
@@ -8073,7 +8073,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<String, Map<String, String[][]>>> response =
                 service.xread(
-                        Collections.singletonMap(keyOne, streamIdOne),
+                        Map.of(keyOne, streamIdOne),
                         StreamReadOptions.builder().block(block).count(count).build());
         Map<String, Map<String, String[][]>> payload = response.get();
 
@@ -8092,7 +8092,7 @@ public class GlideClientTest {
         Long count = 10L;
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult =
-                Collections.singletonMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
         GlideString[] arguments = {
             gs(READ_COUNT_VALKEY_API),
             gs(count.toString()),
@@ -8115,7 +8115,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<GlideString, Map<GlideString, GlideString[][]>>> response =
                 service.xreadBinary(
-                        Collections.singletonMap(keyOne, streamIdOne),
+                        Map.of(keyOne, streamIdOne),
                         StreamReadOptions.builder().block(block).count(count).build());
         Map<GlideString, Map<GlideString, GlideString[][]>> payload = response.get();
 
@@ -8182,7 +8182,7 @@ public class GlideClientTest {
         StreamRange start = IdBound.of(9999L);
         StreamRange end = IdBound.ofExclusive("696969-10");
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8211,8 +8211,7 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult =
-                Collections.singletonMap(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8240,7 +8239,7 @@ public class GlideClientTest {
         StreamRange end = InfRangeBound.MAX;
         long count = 99L;
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8279,8 +8278,7 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult =
-                Collections.singletonMap(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8317,7 +8315,7 @@ public class GlideClientTest {
         StreamRange end = IdBound.of(9999L);
         StreamRange start = IdBound.ofExclusive("696969-10");
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8346,8 +8344,7 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult =
-                Collections.singletonMap(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8376,7 +8373,7 @@ public class GlideClientTest {
         StreamRange start = InfRangeBound.MIN;
         long count = 99L;
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8415,8 +8412,7 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult =
-                Collections.singletonMap(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(completedResult);
@@ -8841,8 +8837,8 @@ public class GlideClientTest {
         String consumerName = "consumerGroup";
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
         String[] arguments = {
             READ_GROUP_VALKEY_API,
             groupName,
@@ -8888,8 +8884,8 @@ public class GlideClientTest {
         GlideString consumerName = gs("consumerGroup");
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult = new LinkedHashMap<>();
-        completedResult.put(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
-        completedResult.put(keyTwo, Collections.singletonMap(streamIdTwo, fieldValues));
+        completedResult.put(keyOne, Map.of(streamIdOne, fieldValues));
+        completedResult.put(keyTwo, Map.of(streamIdTwo, fieldValues));
         GlideString[] arguments = {
             gs(READ_GROUP_VALKEY_API),
             groupName,
@@ -8935,7 +8931,7 @@ public class GlideClientTest {
         String consumerName = "consumerGroup";
         String[][] fieldValues = {{"field", "value"}};
         Map<String, Map<String, String[][]>> completedResult =
-                Collections.singletonMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
         String[] arguments = {
             READ_GROUP_VALKEY_API,
             groupName,
@@ -8962,7 +8958,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<String, Map<String, String[][]>>> response =
                 service.xreadgroup(
-                        Collections.singletonMap(keyOne, streamIdOne),
+                        Map.of(keyOne, streamIdOne),
                         groupName,
                         consumerName,
                         StreamReadGroupOptions.builder().block(block).count(count).noack().build());
@@ -8985,7 +8981,7 @@ public class GlideClientTest {
         GlideString consumerName = gs("consumerGroup");
         GlideString[][] fieldValues = {{gs("field"), gs("value")}};
         Map<GlideString, Map<GlideString, GlideString[][]>> completedResult =
-                Collections.singletonMap(keyOne, Collections.singletonMap(streamIdOne, fieldValues));
+                Map.of(keyOne, Map.of(streamIdOne, fieldValues));
         GlideString[] arguments = {
             gs(READ_GROUP_VALKEY_API),
             groupName,
@@ -9012,7 +9008,7 @@ public class GlideClientTest {
         // exercise
         CompletableFuture<Map<GlideString, Map<GlideString, GlideString[][]>>> response =
                 service.xreadgroup(
-                        Collections.singletonMap(keyOne, streamIdOne),
+                        Map.of(keyOne, streamIdOne),
                         groupName,
                         consumerName,
                         StreamReadGroupOptions.builder().block(block).count(count).noack().build());
@@ -9059,8 +9055,7 @@ public class GlideClientTest {
         Long minIdleTime = 18L;
         String[] ids = new String[] {"testId"};
         String[] arguments = concatenateArrays(new String[] {key, groupName, consumer, "18"}, ids);
-        Map<String, String[][]> mockResult =
-                Collections.singletonMap("1234-0", new String[][] {{"message", "log"}});
+        Map<String, String[][]> mockResult = Map.of("1234-0", new String[][] {{"message", "log"}});
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9091,7 +9086,7 @@ public class GlideClientTest {
         GlideString[] arguments =
                 concatenateArrays(new GlideString[] {key, groupName, consumer, gs("18")}, ids);
         Map<GlideString, GlideString[][]> mockResult =
-                Collections.singletonMap(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
+                Map.of(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9137,8 +9132,7 @@ public class GlideClientTest {
                     "5",
                     FORCE_VALKEY_API
                 };
-        Map<String, String[][]> mockResult =
-                Collections.singletonMap("1234-0", new String[][] {{"message", "log"}});
+        Map<String, String[][]> mockResult = Map.of("1234-0", new String[][] {{"message", "log"}});
 
         CompletableFuture<Map<String, String[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9184,7 +9178,7 @@ public class GlideClientTest {
                     gs(FORCE_VALKEY_API)
                 };
         Map<GlideString, GlideString[][]> mockResult =
-                Collections.singletonMap(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
+                Map.of(gs("1234-0"), new GlideString[][] {{gs("message"), gs("log")}});
 
         CompletableFuture<Map<GlideString, GlideString[][]>> testResponse = new CompletableFuture<>();
         testResponse.complete(mockResult);
@@ -9369,7 +9363,7 @@ public class GlideClientTest {
         String start = "0-0";
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9406,8 +9400,7 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult =
-                Collections.singletonMap(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -9444,7 +9437,7 @@ public class GlideClientTest {
         long count = 1234;
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9484,8 +9477,7 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult =
-                Collections.singletonMap(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -9524,7 +9516,7 @@ public class GlideClientTest {
         String start = "0-0";
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9562,8 +9554,7 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult =
-                Collections.singletonMap(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -9601,7 +9592,7 @@ public class GlideClientTest {
         long count = 1234;
 
         String[][] fieldValuesResult = {{"duration", "12345"}, {"event-id", "2"}, {"user-id", "42"}};
-        Map<String, String[][]> completedResult = Collections.singletonMap(key, fieldValuesResult);
+        Map<String, String[][]> completedResult = Map.of(key, fieldValuesResult);
 
         String[] deletedMessageIds = new String[] {"13-1", "46-2", "89-3"};
 
@@ -9650,8 +9641,7 @@ public class GlideClientTest {
         GlideString[][] fieldValuesResult = {
             {gs("duration"), gs("12345")}, {gs("event-id"), gs("2")}, {gs("user-id"), gs("42")}
         };
-        Map<GlideString, GlideString[][]> completedResult =
-                Collections.singletonMap(key, fieldValuesResult);
+        Map<GlideString, GlideString[][]> completedResult = Map.of(key, fieldValuesResult);
 
         GlideString[] deletedMessageIds = new GlideString[] {gs("13-1"), gs("46-2"), gs("89-3")};
 
@@ -10313,7 +10303,7 @@ public class GlideClientTest {
     public void linsert_returns_success() {
         // setup
         String key = "testKey";
-        InsertPosition position = BEFORE;
+        var position = BEFORE;
         String pivot = "pivot";
         String elem = "elem";
         String[] arguments = new String[] {key, position.toString(), pivot, elem};
@@ -10340,7 +10330,7 @@ public class GlideClientTest {
     public void linsert_binary_returns_success() {
         // setup
         GlideString key = gs("testKey");
-        InsertPosition position = BEFORE;
+        var position = BEFORE;
         GlideString pivot = gs("pivot");
         GlideString elem = gs("elem");
         GlideString[] arguments = new GlideString[] {key, gs(position.toString()), pivot, elem};
@@ -11791,8 +11781,7 @@ public class GlideClientTest {
         // setup
         String[] args = new String[0];
         Map<String, Map<String, Map<String, Object>>> value =
-                Collections.singletonMap(
-                        "::1", Collections.singletonMap("1", Collections.singletonMap("2", 2)));
+                Map.of("::1", Map.of("1", Map.of("2", 2)));
         CompletableFuture<Map<String, Map<String, Map<String, Object>>>> testResponse =
                 new CompletableFuture<>();
         testResponse.complete(value);
@@ -11818,8 +11807,7 @@ public class GlideClientTest {
         // setup
         GlideString[] args = new GlideString[0];
         Map<String, Map<GlideString, Map<GlideString, Object>>> value =
-                Collections.singletonMap(
-                        "::1", Collections.singletonMap(gs("1"), Collections.singletonMap(gs("2"), 2)));
+                Map.of("::1", Map.of(gs("1"), Map.of(gs("2"), 2)));
         CompletableFuture<Map<String, Map<GlideString, Map<GlideString, Object>>>> testResponse =
                 new CompletableFuture<>();
         testResponse.complete(value);
@@ -12143,7 +12131,7 @@ public class GlideClientTest {
         double timeout = 0.1;
         String[] arguments =
                 new String[] {Double.toString(timeout), "2", key, key2, listDirection.toString()};
-        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
+        Map<String, String[]> value = Map.of(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12176,8 +12164,7 @@ public class GlideClientTest {
                 new GlideString[] {
                     gs(Double.toString(timeout)), gs("2"), key, key2, gs(listDirection.toString())
                 };
-        Map<GlideString, GlideString[]> value =
-                Collections.singletonMap(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12217,7 +12204,7 @@ public class GlideClientTest {
                     COUNT_FOR_LIST_VALKEY_API,
                     Long.toString(count)
                 };
-        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
+        Map<String, String[]> value = Map.of(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12257,8 +12244,7 @@ public class GlideClientTest {
                     gs(COUNT_FOR_LIST_VALKEY_API),
                     gs(Long.toString(count))
                 };
-        Map<GlideString, GlideString[]> value =
-                Collections.singletonMap(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12525,7 +12511,7 @@ public class GlideClientTest {
         String[] keys = {key, key2};
         ListDirection listDirection = ListDirection.LEFT;
         String[] arguments = new String[] {"2", key, key2, listDirection.toString()};
-        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
+        Map<String, String[]> value = Map.of(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12552,8 +12538,7 @@ public class GlideClientTest {
         GlideString[] keys = {key, key2};
         ListDirection listDirection = ListDirection.LEFT;
         GlideString[] arguments = new GlideString[] {gs("2"), key, key2, gs(listDirection.toString())};
-        Map<GlideString, GlideString[]> value =
-                Collections.singletonMap(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12586,7 +12571,7 @@ public class GlideClientTest {
                 new String[] {
                     "2", key, key2, listDirection.toString(), COUNT_FOR_LIST_VALKEY_API, Long.toString(count)
                 };
-        Map<String, String[]> value = Collections.singletonMap(key, new String[] {"five"});
+        Map<String, String[]> value = Map.of(key, new String[] {"five"});
 
         CompletableFuture<Map<String, String[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -12622,8 +12607,7 @@ public class GlideClientTest {
                     gs(COUNT_FOR_LIST_VALKEY_API),
                     gs(Long.toString(count))
                 };
-        Map<GlideString, GlideString[]> value =
-                Collections.singletonMap(key, new GlideString[] {gs("five")});
+        Map<GlideString, GlideString[]> value = Map.of(key, new GlideString[] {gs("five")});
 
         CompletableFuture<Map<GlideString, GlideString[]>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13055,7 +13039,7 @@ public class GlideClientTest {
         String key = "testKey";
         long count = 2;
         String[] arguments = new String[] {key, Long.toString(count)};
-        Set<String> value = createSet("one", "two");
+        Set<String> value = Set.of("one", "two");
 
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13080,7 +13064,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         long count = 2;
         GlideString[] arguments = new GlideString[] {key, gs(Long.toString(count))};
-        Set<GlideString> value = createSet(gs("one"), gs("two"));
+        Set<GlideString> value = Set.of(gs("one"), gs("two"));
 
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13534,8 +13518,7 @@ public class GlideClientTest {
         String key1 = "testKey1";
         String key2 = "testKey2";
         String[] arguments = new String[] {key1, key2, IDX_COMMAND_STRING};
-        Map<String, Object> value =
-                createMap("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
+        Map<String, Object> value = Map.of("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13560,8 +13543,7 @@ public class GlideClientTest {
         GlideString key1 = gs("testKey1");
         GlideString key2 = gs("testKey2");
         GlideString[] arguments = new GlideString[] {key1, key2, gs(IDX_COMMAND_STRING)};
-        Map<String, Object> value =
-                createMap("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
+        Map<String, Object> value = Map.of("matches", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -13583,8 +13565,7 @@ public class GlideClientTest {
     @Test
     public void lcsIdx_throws_NullPointerException() {
         // setup
-        Map<String, Object> value =
-                createMap("missing", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
+        Map<String, Object> value = Map.of("missing", new Long[][][] {{{1L, 3L}, {0L, 2L}}}, "len", 3L);
 
         // exception
         RuntimeException runtimeException =
@@ -13604,7 +13585,7 @@ public class GlideClientTest {
         String[] arguments =
                 new String[] {key1, key2, IDX_COMMAND_STRING, MINMATCHLEN_COMMAND_STRING, "2"};
         Map<String, Object> value =
-                createMap(
+                Map.of(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13637,7 +13618,7 @@ public class GlideClientTest {
                     key1, key2, gs(IDX_COMMAND_STRING), gs(MINMATCHLEN_COMMAND_STRING), gs("2")
                 };
         Map<String, Object> value =
-                createMap(
+                Map.of(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13667,7 +13648,7 @@ public class GlideClientTest {
         String key2 = "testKey2";
         String[] arguments = new String[] {key1, key2, IDX_COMMAND_STRING, WITHMATCHLEN_COMMAND_STRING};
         Map<String, Object> value =
-                createMap(
+                Map.of(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13698,7 +13679,7 @@ public class GlideClientTest {
         GlideString[] arguments =
                 new GlideString[] {key1, key2, gs(IDX_COMMAND_STRING), gs(WITHMATCHLEN_COMMAND_STRING)};
         Map<String, Object> value =
-                createMap(
+                Map.of(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13736,7 +13717,7 @@ public class GlideClientTest {
                     WITHMATCHLEN_COMMAND_STRING
                 };
         Map<String, Object> value =
-                createMap(
+                Map.of(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -13774,7 +13755,7 @@ public class GlideClientTest {
                     gs(WITHMATCHLEN_COMMAND_STRING)
                 };
         Map<String, Object> value =
-                createMap(
+                Map.of(
                         "matches",
                         new Object[] {new Object[] {new Long[] {1L, 3L}, new Long[] {0L, 2L}, 3L}},
                         "len",
@@ -14008,7 +13989,7 @@ public class GlideClientTest {
     public void pubsubNumSub_returns_success() {
         // setup
         String[] arguments = new String[] {"ch1", "ch2"};
-        Map<String, Long> value = Collections.emptyMap();
+        Map<String, Long> value = Map.of();
 
         CompletableFuture<Map<String, Long>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -14031,7 +14012,7 @@ public class GlideClientTest {
     public void pubsubNumSubBinary_returns_success() {
         // setup
         GlideString[] arguments = new GlideString[] {gs("ch1"), gs("ch2")};
-        Map<GlideString, Long> value = Collections.emptyMap();
+        Map<GlideString, Long> value = Map.of();
 
         CompletableFuture<Map<GlideString, Long>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
@@ -14055,7 +14036,7 @@ public class GlideClientTest {
     public void sunion_returns_success() {
         // setup
         String[] keys = new String[] {"key1", "key2"};
-        Set<String> value = createSet("1", "2");
+        Set<String> value = Set.of("1", "2");
         CompletableFuture<Set<String>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
 
@@ -14077,7 +14058,7 @@ public class GlideClientTest {
     public void sunion_binary_returns_success() {
         // setup
         GlideString[] keys = new GlideString[] {gs("key1"), gs("key2")};
-        Set<GlideString> value = createSet(gs("1"), gs("2"));
+        Set<GlideString> value = Set.of(gs("1"), gs("2"));
         CompletableFuture<Set<GlideString>> testResponse = new CompletableFuture<>();
         testResponse.complete(value);
 
@@ -14945,7 +14926,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchArguments() {
-        return Arrays.asList(
+        return List.of(
                 Arguments.of(
                         "geosearch_from_member_no_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -15011,7 +14992,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchArgumentsBinary() {
-        return Arrays.asList(
+        return List.of(
                 Arguments.of(
                         "geosearch_from_member_no_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15142,7 +15123,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchWithOptionsArguments() {
-        return Arrays.asList(
+        return List.of(
                 Arguments.of(
                         "geosearch_from_member_with_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -15207,7 +15188,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchWithOptionsArgumentsBinary() {
-        return Arrays.asList(
+        return List.of(
                 Arguments.of(
                         "geosearch_from_member_with_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15334,7 +15315,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreArguments() {
-        return Arrays.asList(
+        return List.of(
                 Arguments.of(
                         "geosearchstore_from_member_no_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -15409,7 +15390,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreArgumentsBinary() {
-        return Arrays.asList(
+        return List.of(
                 Arguments.of(
                         "geosearchstore_from_member_no_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15545,7 +15526,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreWithOptionsArguments() {
-        return Arrays.asList(
+        return List.of(
                 Arguments.of(
                         "geosearchstore_from_member_with_options",
                         new GeoSearchOrigin.MemberOrigin("member"),
@@ -15587,7 +15568,7 @@ public class GlideClientTest {
     }
 
     private static List<Arguments> getGeoSearchStoreWithOptionsArgumentsBinary() {
-        return Arrays.asList(
+        return List.of(
                 Arguments.of(
                         "geosearchstore_from_member_with_options",
                         new GeoSearchOrigin.MemberOriginBinary(gs("member")),
@@ -15701,7 +15682,7 @@ public class GlideClientTest {
         String[] arguments = {key};
         Map<String, Object>[] mockResult =
                 new Map[] {
-                    createMap(
+                    Map.of(
                             "name",
                             "groupName",
                             "consumers",
@@ -15741,7 +15722,7 @@ public class GlideClientTest {
         GlideString[] arguments = {key};
         Map<GlideString, Object>[] mockResult =
                 new Map[] {
-                    createMap(
+                    Map.of(
                             gs("name"),
                             gs("groupName"),
                             gs("consumers"),
@@ -15782,7 +15763,7 @@ public class GlideClientTest {
         String[] arguments = {key, groupName};
         Map<String, Object>[] mockResult =
                 new Map[] {
-                    createMap("name", "groupName", "pending", 2, "idle", 9104628, "inactive", 18104698)
+                    Map.of("name", "groupName", "pending", 2, "idle", 9104628, "inactive", 18104698)
                 };
 
         CompletableFuture<Map<String, Object>[]> testResponse = new CompletableFuture<>();
@@ -15811,7 +15792,7 @@ public class GlideClientTest {
         GlideString[] arguments = {key, groupName};
         Map<GlideString, Object>[] mockResult =
                 new Map[] {
-                    createMap(
+                    Map.of(
                             gs("name"),
                             gs("groupName"),
                             gs("pending"),
@@ -15845,7 +15826,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = {key};
-        Map<String, Object> summary = Collections.singletonMap("some", "data");
+        Map<String, Object> summary = Map.of("some", "data");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15870,7 +15851,7 @@ public class GlideClientTest {
         // setup
         String key = "testKey";
         String[] arguments = {key, FULL};
-        Map<String, Object> summary = Collections.singletonMap("some", "data");
+        Map<String, Object> summary = Map.of("some", "data");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15896,7 +15877,7 @@ public class GlideClientTest {
         String key = "testKey";
         int count = 42;
         String[] arguments = {key, FULL, COUNT, "42"};
-        Map<String, Object> summary = Collections.singletonMap("some", "data");
+        Map<String, Object> summary = Map.of("some", "data");
 
         CompletableFuture<Map<String, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15921,7 +15902,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = {key};
-        Map<GlideString, Object> summary = Collections.singletonMap(gs("some"), gs("data"));
+        Map<GlideString, Object> summary = Map.of(gs("some"), gs("data"));
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15946,7 +15927,7 @@ public class GlideClientTest {
         // setup
         GlideString key = gs("testKey");
         GlideString[] arguments = {key, gs(FULL)};
-        Map<GlideString, Object> summary = Collections.singletonMap(gs("some"), gs("data"));
+        Map<GlideString, Object> summary = Map.of(gs("some"), gs("data"));
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -15972,7 +15953,7 @@ public class GlideClientTest {
         GlideString key = gs("testKey");
         int count = 42;
         GlideString[] arguments = {key, gs(FULL), gs(COUNT), gs("42")};
-        Map<GlideString, Object> summary = Collections.singletonMap(gs("some"), gs("data"));
+        Map<GlideString, Object> summary = Map.of(gs("some"), gs("data"));
 
         CompletableFuture<Map<GlideString, Object>> testResponse = new CompletableFuture<>();
         testResponse.complete(summary);
@@ -16100,47 +16081,76 @@ public class GlideClientTest {
         assertEquals(OK, payload);
     }
 
-    private static <K, V> Map<K, V> createMap(K k1, V v1, K k2, V v2) {
-        Map<K, V> map = new LinkedHashMap<>();
-        map.put(k1, v1);
-        map.put(k2, v2);
-        return map;
+    @SneakyThrows
+    @Test
+    public void subscribe_returns_success() {
+        // setup
+        CompletableFuture<Void> testResponse = new CompletableFuture<>();
+        testResponse.complete(null);
+
+        // match on protobuf request
+        when(commandManager.<Void>submitNewCommand(eq(SubscribeBlocking), any(String[].class), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<Void> response = service.subscribe(Set.of("channel1", "channel2"), 5000);
+
+        // verify
+        assertNull(response.get());
     }
 
-    private static <K, V> Map<K, V> createMap(K k1, V v1, K k2, V v2, K k3, V v3) {
-        Map<K, V> map = new LinkedHashMap<>();
-        map.put(k1, v1);
-        map.put(k2, v2);
-        map.put(k3, v3);
-        return map;
+    @SneakyThrows
+    @Test
+    public void unsubscribe_returns_success() {
+        // setup
+        CompletableFuture<Void> testResponse = new CompletableFuture<>();
+        testResponse.complete(null);
+
+        // match on protobuf request
+        when(commandManager.<Void>submitNewCommand(eq(UnsubscribeBlocking), any(String[].class), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<Void> response = service.unsubscribe(Set.of("channel1"), 1000);
+
+        // verify
+        assertNull(response.get());
     }
 
-    private static <T> Set<T> createSet(T... elements) {
-        Set<T> set = new java.util.LinkedHashSet<>();
-        for (T element : elements) {
-            set.add(element);
-        }
-        return set;
+    @SneakyThrows
+    @Test
+    public void psubscribe_returns_success() {
+        // setup
+        CompletableFuture<Void> testResponse = new CompletableFuture<>();
+        testResponse.complete(null);
+
+        // match on protobuf request
+        when(commandManager.<Void>submitNewCommand(eq(PSubscribeBlocking), any(String[].class), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<Void> response = service.psubscribe(Set.of("pattern*"), 3000);
+
+        // verify
+        assertNull(response.get());
     }
 
-    private static <K, V> Map<K, V> createMap(K k1, V v1, K k2, V v2, K k3, V v3, K k4, V v4) {
-        Map<K, V> map = new LinkedHashMap<>();
-        map.put(k1, v1);
-        map.put(k2, v2);
-        map.put(k3, v3);
-        map.put(k4, v4);
-        return map;
-    }
+    @SneakyThrows
+    @Test
+    public void punsubscribe_returns_success() {
+        // setup
+        CompletableFuture<Void> testResponse = new CompletableFuture<>();
+        testResponse.complete(null);
 
-    private static <K, V> Map<K, V> createMap(
-            K k1, V v1, K k2, V v2, K k3, V v3, K k4, V v4, K k5, V v5, K k6, V v6) {
-        Map<K, V> map = new LinkedHashMap<>();
-        map.put(k1, v1);
-        map.put(k2, v2);
-        map.put(k3, v3);
-        map.put(k4, v4);
-        map.put(k5, v5);
-        map.put(k6, v6);
-        return map;
+        // match on protobuf request
+        when(commandManager.<Void>submitNewCommand(
+                        eq(PUnsubscribeBlocking), any(String[].class), any()))
+                .thenReturn(testResponse);
+
+        // exercise
+        CompletableFuture<Void> response = service.punsubscribe(Set.of("pattern*"), 2000);
+
+        // verify
+        assertNull(response.get());
     }
 }
